--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     volumes:
       - ./prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
   collector:
-    image: starlette
+    build:
+      context:  ./starlette
     command: /start-reload.sh
     ports:
       - "80:80"
