--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@ version: "3.8"
 services:
   prometheus:
     image: prom/prometheus
-    network_mode: "host"
     ports:
-      - "9090"
+      - "9090:9090"
     volumes:
       - ./prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
-  collector:
+  telemetry-collector:
     build:
-      context:  ./starlette
+      context:  ./collector/telemetry-collector
     command: /start-reload.sh
     ports:
       - "80:80"
     volumes:
-      - ./starlette/app:/app
-    
+      - ./collector/telemetry-collector/app:/app
