--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,11 @@ services:
       - "80:80"
     volumes:
       - ./collector/telemetry-collector/app:/app
+  query-collector:
+    build:
+      context:  ./collector/query-collector
+    command: /start-reload.sh
+    ports:
+      - "81:80"
+    volumes:
+      - ./collector/query-collector/app:/app
