--- a/ngsi-ld/docker-compose.yml
+++ b/ngsi-ld/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - zookeeper
+    logging:
+      driver: none
   postgres:
     image: mdillon/postgis
     ports:
