--- a/collector/query-collector/docker-compose-query.yml
+++ b/collector/query-collector/docker-compose-query.yml
@@ -19,6 +19,8 @@ services:
     image: zookeeper
     ports:
       - "2181"
+    logging:
+      driver: none
   kafka:
     image: wurstmeister/kafka
     hostname: kafka
@@ -42,6 +44,8 @@ services:
       POSTGRES_USER: ngb
       POSTGRES_PASSWORD: ngb
       POSTGRES_DB: ngb
+    logging:
+      driver: none
   scorpio:
     image: scorpiobroker/scorpio:scorpio-aaio_1.0.0
     ports:
