Add API for dummy consumer

--- a/collector/query-collector/docker-compose-query.yml
+++ b/collector/query-collector/docker-compose-query.yml
@@ -13,8 +13,13 @@ services:
       - "8080:8080"
     volumes:
       - ./app:/app
-    environment:
-      FLASK_ENV: development
+  consumer:
+    build:
+      context: .
+    ports:
+      - "8081:8080"
+    volumes:
+      - ./app:/app
   zookeeper:
     image: zookeeper
     ports:
