--- a/collector/query-collector/docker-compose-query.yml
+++ b/collector/query-collector/docker-compose-query.yml
@@ -49,7 +49,8 @@ services:
       POSTGRES_USER: ngb
       POSTGRES_PASSWORD: ngb
       POSTGRES_DB: ngb
-
+    logging:
+      driver: none
   scorpio:
     image: scorpiobroker/scorpio:scorpio-aaio_1.0.2
     ports:
