--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+#lib/
 lib64/
 parts/
 sdist/
@@ -139,3 +139,6 @@ cython_debug/
 
 # VSCode
 .vscode
+
+# Desktop Services Store macOS
+.DS_Store
