Collector container and compose files centralized architecture

--- a/collector-centralized/Dockerfile
+++ b/collector-centralized/Dockerfile
@@ -1,6 +1,12 @@
-FROM python:3.7
+FROM python:3.8
 
 COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
+COPY ./app /app
+
+WORKDIR /app
+
+# Sleep forever until main.py is available
+CMD [ "tail", "-f", "/dev/null" ]
