Include file-server container
Stores JSON-LD context files so we can manage these files locally. Container mounts file-server folder enabling modifications of context file at runtime.

--- a/docker-compose-centralized.yml
+++ b/docker-compose-centralized.yml
@@ -1,13 +1,5 @@
 version: '3'
 services:
-  prometheus:
-    image: prom/prometheus
-    hostname: prometheus
-    container_name: prometheus
-    ports:
-      - "9099:9090"
-    volumes:
-      - ./collector/prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
   collector:
     build:
       context: ./collector-centralized
@@ -15,7 +7,6 @@ services:
     container_name: collector
     volumes:
       - ./collector-centralized/app:/app
-
   # Re-use collector image to deploy dummy consumer
   consumer:
     build:
@@ -27,15 +18,14 @@ services:
       - "8081:8080"
     volumes:
       - ./collector/app:/app
-  zookeeper:
-    image: zookeeper
-    hostname: zookeeper
-    container_name: zookeeper
+  file-server:
+    image: halverneus/static-file-server
+    hostname: file-server
+    container_name: file-server
     ports:
-      - "2181"
-    logging:
-      driver: none
-    working_dir: /
+      - "8082:8080"
+    volumes:
+      - ./file-server:/web
   kafka:
     image: wurstmeister/kafka
     hostname: kafka
@@ -63,6 +53,14 @@ services:
     depends_on:
       - kafka
       - zookeeper
+  node-exporter:
+    image: prom/node-exporter
+    hostname: node-exporter
+    container_name: node-exporter
+    ports:
+      - "9100:9100"
+    depends_on:
+      - prometheus
   postgres:
     image: mdillon/postgis
     hostname: postgres
@@ -75,6 +73,14 @@ services:
       POSTGRES_DB: ngb
     logging:
       driver: none
+  prometheus:
+    image: prom/prometheus
+    hostname: prometheus
+    container_name: prometheus
+    ports:
+      - "9099:9090"
+    volumes:
+      - ./collector/prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
   scorpio:
     image: scorpiobroker/scorpio:scorpio-aaio_1.0.2
     hostname: scorpio
@@ -84,11 +90,12 @@ services:
     depends_on:
       - kafka
       - postgres
-  node-exporter:
-    image: prom/node-exporter
-    hostname: node-exporter
-    container_name: node-exporter
+  zookeeper:
+    image: zookeeper
+    hostname: zookeeper
+    container_name: zookeeper
     ports:
-      - "9100:9100"
-    depends_on:
-      - prometheus
+      - "2181"
+    logging:
+      driver: none
+    working_dir: /
