--- a/kafka/connect/Dockerfile
+++ b/kafka/connect/Dockerfile
@@ -4,7 +4,7 @@ FROM wurstmeister/kafka
 RUN mkdir /opt/kafka_2.13-2.6.0/plugins
 
 # kafka-connect-http plugin
-COPY ./config/castorm-kafka-connect-http-0.7.6 /opt/kafka_2.13-2.6.0/plugins/castorm-kafka-connect-http-0.7.6
+COPY ./config/plugins /opt/kafka_2.13-2.6.0/plugins/
 
 # we replace the default connect-distributed.properties so we can properly resolve to our local kafka docker development
 COPY ./config/connect-distributed.properties /opt/kafka_2.13-2.6.0/config/
