--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ docs/_build/
 
 # PyBuilder
 .pybuilder/
-target/
+#target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -142,3 +142,5 @@ cython_debug/
 
 # Desktop Services Store macOS
 .DS_Store
+
+#
