--- a/prometheus/config/prometheus.yml
+++ b/prometheus/config/prometheus.yml
@@ -26,12 +26,20 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: node
+  - job_name: 'node-1'
 
     scrape_interval: 5s
 
     static_configs:
-    - targets: ['node-exporter:9100']
+    - targets: ['node-exporter-1:9100']
+
+  - job_name: 'node-2'
+
+    scrape_interval: 5s
+
+    static_configs:
+    - targets: ['node-exporter-2:9100']
+ 
   # REQUIRES configuring docker daemon.json
   # - job_name: 'docker'
   #        # metrics_path defaults to '/metrics'
