--- a/weaver/Dockerfile
+++ b/weaver/Dockerfile
@@ -10,4 +10,4 @@ WORKDIR /app
 
 EXPOSE 8080
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080", "--reload", "--log-config", "config/log.yaml"]
