[S-32 & S-37] Support uploading of Flink JARs and execution of jobs through the weaver / broker (PROBLEM IN UPDATING JAR AND JOB IDs BY INFITE LOOP)

--- a/docker-compose-stream-processing.yml
+++ b/docker-compose-stream-processing.yml
@@ -122,6 +122,14 @@ services:
     depends_on:
       - kafka
       - postgres
+  stream-catalog:
+    image: halverneus/static-file-server
+    hostname: stream-catalog
+    container_name: stream-catalog
+    ports:
+      - "8083:8080"
+    volumes:
+      - ./stream-catalog:/web
   weaver:
     build:
       context: ./weaver
