--- a/schema-registry/minimal-ubuntu/Dockerfile
+++ b/schema-registry/minimal-ubuntu/Dockerfile
@@ -17,7 +17,7 @@ RUN apt update -y && \
 
 # python
 RUN apt install -y python-dev && \
-    curl "https://bootstrap.pypa.io/2.7/get-pip.py" -o /tmp/get-pip.py && \
+    curl "https://bootstrap.pypa.io/pip/2.7/get-pip.py" -o /tmp/get-pip.py && \
     python /tmp/get-pip.py
 
 # java
