Upgrade Scorpio version to release FIWARE_7.9.2

--- a/docker-compose-arista.yml
+++ b/docker-compose-arista.yml
@@ -109,7 +109,7 @@ services:
     volumes:
       - ./prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
   scorpio:
-    image: scorpiobroker/scorpio:scorpio-aaio_1.0.5
+    image: scorpiobroker/scorpio:scorpio-aaio_FIWARE_7.9.2
     hostname: scorpio
     container_name: scorpio
     ports:
