--- a/docker-compose-arista.yml
+++ b/docker-compose-arista.yml
@@ -1,15 +1,5 @@
 version: '3'
 services:
-  consumer:
-    build:
-      context: ./consumer
-      dockerfile: Dockerfile
-    hostname: consumer
-    container_name: consumer
-    ports:
-      - "8081:8080"
-    volumes:
-      - ./consumer/app:/app
   context-catalog:
     image: halverneus/static-file-server
     hostname: context-catalog
@@ -18,32 +8,6 @@ services:
       - "8082:8080"
     volumes:
       - ./context-catalog:/web
-  flink-jobmanager:
-    image: flink:latest
-    hostname: flink-jobmanager
-    container_name: flink-jobmanager
-    ports:
-      - "8084:8081"
-    command: jobmanager
-    environment:
-      - |
-        FLINK_PROPERTIES=
-        jobmanager.rpc.address: flink-jobmanager
-    volumes:
-      - ./flink-conf:/flink-conf
-  flink-taskmanager:
-    image: flink:latest
-    hostname: flink-taskmanager
-    container_name: flink-taskmanager
-    depends_on:
-      - flink-jobmanager
-    command: taskmanager
-    scale: 1
-    environment:
-      - |
-        FLINK_PROPERTIES=
-        jobmanager.rpc.address: flink-jobmanager
-        taskmanager.numberOfTaskSlots: 2
   kafka:
     image: wurstmeister/kafka:latest
     hostname: kafka
@@ -71,23 +35,7 @@ services:
       - "8080:8080"
     volumes:
       - ./gnmic-cfgs:/gnmic-cfgs
-    #command: "curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | bash"
-  node-exporter-1:
-    image: prom/node-exporter
-    hostname: node-exporter-1
-    container_name: node-exporter-1
-    ports:
-      - "9100:9100"
-    depends_on:
-      - prometheus
-  node-exporter-2:
-    image: prom/node-exporter
-    hostname: node-exporter-2
-    container_name: node-exporter-2
-    ports:
-      - "9101:9100"
-    depends_on:
-      - prometheus
+      - ./nifi:/opt/aggregator
   postgres:
     image: mdillon/postgis
     hostname: postgres
@@ -100,14 +48,22 @@ services:
       POSTGRES_DB: ngb
     logging:
       driver: none
-  prometheus:
-    image: prom/prometheus
-    hostname: prometheus
-    container_name: prometheus
+  schema-registry:
+    image: schema-registry:0.9.0
+    hostname: schema-registry
+    container_name: schema-registry
+    environment:
+      DB_TYPE: "postgresql"
+      DATA_SRC_CLASS_NAME: "org.postgresql.ds.PGSimpleDataSource"
+      DB_URL: "jdbc:postgresql://postgres/ngb"
+      DB_USER: ngb
+      DB_PASSWORD: ngb
+      REGISTRY_HEAP_OPTS: "-Xmx1G -Xms1G"
     ports:
-      - "9099:9090"
-    volumes:
-      - ./prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - "9010:9090"
+      - "9011:9091"
+    depends_on:
+      - postgres
   scorpio:
     image: scorpiobroker/scorpio:scorpio-aaio_FIWARE_7.9.2
     hostname: scorpio
@@ -117,14 +73,6 @@ services:
     depends_on:
       - kafka
       - postgres
-  stream-catalog:
-    image: halverneus/static-file-server
-    hostname: stream-catalog
-    container_name: stream-catalog
-    ports:
-      - "8083:8080"
-    volumes:
-      - ./stream-catalog:/web
   weaver:
     build:
       context: ./weaver
@@ -146,7 +94,7 @@ services:
       driver: none
     working_dir: /
   ceos1:
-    image: "ceos-image:4.24.4M"
+    image: "ceos-image:4.24.5M"
     hostname: ceos1
     container_name: ceos1
     ports:
@@ -165,7 +113,7 @@ services:
       net1:
       net2:
   ceos2:
-    image: "ceos-image:4.24.4M"
+    image: "ceos-image:4.24.5M"
     hostname: ceos2
     container_name: ceos2
     ports:
