Restructuring and updating configuration files folder for gNMIc and updating the gNMIc installation on weaver and nifi docker services

--- a/weaver/Dockerfile
+++ b/weaver/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.8
 
+USER root
+
+# Install gNMIc
+RUN bash -c "$(curl -sL https://get-gnmic.kmrd.dev)"
+
 COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
