--- a/5GEVE/complex_publisher/Dockerfile
+++ b/5GEVE/complex_publisher/Dockerfile
@@ -8,7 +8,9 @@ RUN apt-get install -y openjdk-8-jdk python3 python3-pip curl locales nano git i
 RUN pip3 install kafka-python
 
 # Copy files
-COPY files/publisher.py /
+COPY files/publisher-eve.py /
+COPY files/publisher-logparser.py /
+COPY files/log-sample-input.json /
 
 # Entrypoint script
 COPY files/entrypoint.sh /
