--- a/docker-compose-prometheus.yml
+++ b/docker-compose-prometheus.yml
@@ -28,34 +28,8 @@ services:
       - "8085:8080"
     volumes:
       - ./experimenter/app:/app
-  flink-jobmanager:
-    image: flink:latest
-    hostname: flink-jobmanager
-    container_name: flink-jobmanager
-    ports:
-      - "8084:8081"
-    command: jobmanager
-    environment:
-      - |
-        FLINK_PROPERTIES=
-        jobmanager.rpc.address: flink-jobmanager
-    volumes:
-      - ./flink-conf:/flink-conf
-  flink-taskmanager:
-    image: flink:latest
-    hostname: flink-taskmanager
-    container_name: flink-taskmanager
-    depends_on:
-      - flink-jobmanager
-    command: taskmanager
-    scale: 1
-    environment:
-      - |
-        FLINK_PROPERTIES=
-        jobmanager.rpc.address: flink-jobmanager
-        taskmanager.numberOfTaskSlots: 2
   kafka:
-    image: wurstmeister/kafka:latest
+    image: wurstmeister/kafka
     hostname: kafka
     container_name: kafka
     ports:
@@ -69,24 +43,16 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - zookeeper
-#  kafka-streams:
-#    image: ubuntu:18.04
-#    hostname: kafka-streams
-#    container_name: kafka-streams
-#    build:
-#      context: ./kafka/streams
-#    depends_on:
-#      - kafka
-#      - zookeeper
-#    volumes:
-#      - ./kafka/streams/streams.examples:/kafka_2.13-2.7.0/streams.examples
-#    command: tail -f /dev/null
   nifi:
-    image: apache/nifi
+    build:
+      context: ./nifi
+      dockerfile: Dockerfile
     hostname: nifi
     container_name: nifi
     ports:
       - "8080:8080"
+    volumes:
+      - ./nifi:/opt/aggregator
   node-exporter-1:
     image: prom/node-exporter
     hostname: node-exporter-1
@@ -152,7 +118,7 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - schema-registry
+      - schema-registry-confluent
   scorpio:
     image: scorpiobroker/scorpio:scorpio-aaio_FIWARE_7.9.2
     hostname: scorpio
@@ -162,14 +128,6 @@ services:
     depends_on:
       - kafka
       - postgres
-  stream-catalog:
-    image: halverneus/static-file-server
-    hostname: stream-catalog
-    container_name: stream-catalog
-    ports:
-      - "8083:8080"
-    volumes:
-      - ./stream-catalog:/web
   weaver:
     build:
       context: ./weaver
