--- a/docker-compose-prometheus.yml
+++ b/docker-compose-prometheus.yml
@@ -49,6 +49,7 @@ services:
       dockerfile: Dockerfile
     hostname: nifi
     container_name: nifi
+    user: root
     ports:
       - "8080:8080"
     volumes:
@@ -95,7 +96,7 @@ services:
     container_name: schema-registry-confluent
     restart: always
     environment:
-      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry-confluent
       SCHEMA_REGISTRY_LISTENERS: "http://0.0.0.0:8081"
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:9092
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: INFO
